--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link  rel="stylesheet" href="CSS\style.css" />
-    <link  rel="stylesheet" href="css\utilities.css"/>
 </head>
 <body>
     <div class="main">
@@ -44,7 +43,7 @@
                     
                 </div>
             <div class="form">
-            <div><img src="rainier.jpg" width="400" height="400"></div>
+            <div><img src="Rainier.jpg" width="400" height="400"></div>
         </div>
         </header>
         
